# wagtail_text_alignment

./: MANIFEST.in  README.md  doccer.yaml  push-to-github.ps1  pytest.ini  quickgo.yaml  setup.cfg
.github/workflows/: main.yml
wagtail_text_alignment/: apps.py  wagtail_hooks.py
wagtail_text_alignment/static/wagtail_text_alignment/: alignment.css  alignment.js
